--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>To-Do List App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,46 +11,23 @@
     <div class="container">
         <h1>My To-Do List</h1>
 
-        <!-- FORM INPUT -->
         <div class="todo-form">
-            <input 
-                type="text" 
-                id="todo-input" 
-                placeholder="Enter your task..."
-            >
-
-            <input 
-                type="date" 
-                id="date-input"
-            >
-
-            <button id="add-btn">
-                Add Task
-            </button>
+            <input type="text" id="todo-input" placeholder="Enter your task...">
+            <input type="date" id="date-input">
+            <button id="add-btn">Add Task</button>
         </div>
 
-        <!-- FILTER BUTTON -->
         <div class="filter">
-            <button onclick="filterTasks('all')">
-                All
-            </button>
-
-            <button onclick="filterTasks('completed')">
-                Completed
-            </button>
-
-            <button onclick="filterTasks('pending')">
-                Pending
-            </button>
+            <button class="filter-btn active" data-filter="all">All</button>
+            <button class="filter-btn" data-filter="completed">Completed</button>
+            <button class="filter-btn" data-filter="pending">Pending</button>
         </div>
 
-        <!-- TODO LIST -->
         <ul id="todo-list"></ul>
 
+        <p id="empty-state" class="empty">No task found</p>
     </div>
 
-    <!-- JAVASCRIPT -->
-    <script src="js/script.js"></script>
-
+<script src="js/script.js"></script>
 </body>
 </html>
