--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List App</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 
@@ -28,6 +28,6 @@
         <p id="empty-state" class="empty">No task found</p>
     </div>
 
-<script src="js/script.js"></script>
+<script src="JS/script.js"></script>
 </body>
 </html>
